fix spacing

--- a/src/main.scss
+++ b/src/main.scss
@@ -21,12 +21,12 @@ $message-text-color: black;
 
 %home-timeline-inner-container {
     border: 1px solid;
-    margin: 44px 10px 40px 25px;
+    margin: 39px 10px 40px 25px;
 }
 
 %user-timeline-inner-container {
     border: 1px solid;
-    margin: 44px 25px 40px 10px;
+    margin: 39px 25px 40px 10px;
 }
 
 %title-style {
